# myRTP

./: .gitmodules  CMakeLists.txt  README.md
.github/classroom/: autograding.json
src/: receiver.c  rtp.h  sender.c  test.cpp  util.c  util.h
